--- a/BoardWeb/src/main/webapp/WEB-INF/web.xml
+++ b/BoardWeb/src/main/webapp/WEB-INF/web.xml
@@ -9,7 +9,7 @@
   </filter>
   <filter-mapping>
     <filter-name>log</filter-name>
-    <url-pattern>/*</url-pattern>
+    <url-pattern>*.do</url-pattern>
   </filter-mapping>
   
   <listener>
